# orgapp

./: .gitignore  Main.hs  NOTES  Paths_orgapp.hs  TODO  Tests.hs  clean  compile-app  compile.sh  interface.glade  orgapp.cabal  run-app  run-tests
src/: Bucket.hs  BucketLoader.hs  DirectoryInfo.hs  FileInfo.hs  ItemsTreeModel.hs  Main.hs  MainWindow.hs  Meta.hs  Open.hs  SearchFilter.hs
src/Bucket/: EditItem.hs  Import.hs  Load.hs  Types.hs
src/GUI/: ItemEditor.hs  ItemsTreeModel.hs  MainWindow.hs  TagEditor.hs
tests/: AllTests.hs  Asserts.hs  BucketCreationTests.hs  BucketImportingTests.hs  BucketLoaderTests.hs  BucketLoadingTests.hs  Fixtures.hs  QCTests.hs  TestBucket.hs  TestCreateBucket.hs  TestEditItem.hs  TestImportFile.hs  TestLoadBucket.hs  TestMeta.hs  TestReadDirectoryInfo.hs  TestSearch.hs  Tests.hs  UnitTests.hs  Utils.hs
